--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,69 +1,63 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
 import Logo from "../components/Logo.astro";
+import Children from "../react/Children";
+import Site from "../svelte/Site.svelte";
+import Button from "../vue/Button.vue";
+import Intro from "../components/Intro.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <main>
     <Logo />
-    <h1 class="text-gradient">Astro 🚀🌙</h1>
+    <h1 class="text-gradient">Famly</h1>
+    <img src="/famly.jpg" />
+    <Intro />
 
-    <ul role="list" class="link-card-grid">
-      <Card
-        href="https://docs.astro.build/"
-        title="Documentation"
-        body="Learn how Astro works and explore the official API docs."
-      />
-      <Card
-        href="https://astro.build/integrations/"
-        title="Integrations"
-        body="Supercharge your project with new frameworks and libraries."
-      />
-      <Card
-        href="https://astro.build/themes/"
-        title="Themes"
-        body="Explore a galaxy of community-built starter themes."
-      />
-      <Card
-        href="https://astro.build/chat/"
-        title="Community"
-        body="Come say hi to our amazing Discord community. ❤️"
-      />
-    </ul>
+    <div class="flex">
+      <div>
+        <h1>Children</h1>
+        <Children client:visible>
+          <Button>➕</Button>
+        </Children>
+      </div>
+      <div>
+        <h1>Site</h1>
+        <Site client:visible />
+      </div>
+    </div>
   </main>
-</Layout>
 
-<style>
-  main {
-    margin: auto;
-    padding: 1rem;
-    width: 800px;
-    max-width: calc(100% - 2rem);
-    color: white;
-    font-size: 20px;
-    line-height: 1.6;
-  }
+  <style>
+    main {
+      margin: auto;
+      padding: 1rem;
+      width: 800px;
+      max-width: calc(100% - 2rem);
+      color: white;
+      font-size: 20px;
+      line-height: 1.6;
+    }
 
-  h1 {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 1;
-    text-align: center;
-    margin-bottom: 1em;
-  }
-  .text-gradient {
-    background-image: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 400%;
-    background-position: 0%;
-  }
+    h1 {
+      font-size: 4rem;
+      font-weight: 700;
+      line-height: 1;
+      text-align: center;
+      margin-bottom: 1em;
+    }
+    .text-gradient {
+      background-image: var(--accent-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-size: 400%;
+      background-position: 0%;
+    }
 
-  .link-card-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-    gap: 2rem;
-    padding: 0;
-  }
-</style>
+    .flex {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+    }
+  </style>
+</Layout>../react/Children
