Add client load to svelte component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Intro from "../components/Intro.astro";
       </div>
       <div>
         <h1>Site</h1>
-        <Site client:visible />
+        <Site client:load />
       </div>
     </div>
   </main>
