Update folder names

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 import Logo from "../components/Logo.astro";
 import Children from "../react/Children";
-import Site from "../svelte/Site.svelte";
-import Button from "../vue/Button.vue";
+import Site from "../site/Site.svelte";
+import Button from "../button/Button.vue";
 import Intro from "../components/Intro.astro";
 ---
 
@@ -60,4 +60,4 @@ import Intro from "../components/Intro.astro";
       justify-content: space-between;
     }
   </style>
-</Layout>../react/Children
+</Layout>../react/Children ../Children/Children
